wp-content/themes/case-unsolved/scss/home.scss
.home-header {
  padding-top: 11rem;

  @media (min-width: $tablet) {
    padding-top: 15rem;
  }

  .container {
    position: relative;
    z-index: 1;
  }
}

.home-header .wp-post-image {
  @extend .transition-scale-down;
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 20rem;
  border: 0;
  border-radius: 0;
  background-color: var(--hiq-gray-darker);
  object-fit: cover;
  object-position: bottom;

  @media (min-width: $tablet) {
    height: 40rem;
  }
}

.home-header-text {
  max-width: 32rem;
}

.home-title {
  margin-bottom: 0.5rem;
  font-size: 3.25rem;
  line-height: 1;

  @media (min-width: 30rem) {
    font-size: 5rem;
  }

  @media (min-width: $desktop-sm) {
    font-size: 6rem;
  }
}

.home-lead {
  margin-bottom: 2rem;
  font-size: var(--hiq-font-size-large);
  font-weight: var(--hiq-font-weight-bold);
  line-height: 1.25;
  color: var(--hiq-color-primary);

  @media (min-width: $tablet) {
    margin-bottom: 3rem;
  }
}

.awards {
  margin: 4rem 0 5rem;

  @media (min-width: $tablet) {
    margin: 5rem 0 6rem;
  }
}

.awards-wrapper {
  @media (min-width: $tablet) {
    display: flex;
    position: relative;
    align-items: center;
    justify-content: center;

    &::before {
      display: block;
      position: absolute;
      top: 50%;
      left: 0;
      width: 100%;
      height: 2px;
      background-color: var(--hiq-gray-dark);
      transform: translateY(-50%);
      content: '';
    }

    &::after {
      display: block;
      position: absolute;
      top: 50%;
      left: 50%;
      width: 36rem;
      height: 5px;
      background-color: var(--hiq-gray-darkest);
      transform: translate(-50%, -50%);
      content: '';
    }
  }
}

.award {
  position: relative;
  z-index: 1;
  width: 13.5rem;
  height: 13.5rem;
  margin: 0 auto;
  padding: 2.5rem;
  text-align: center;

  @media (min-width: $tablet) {
    width: 15rem;
    height: 15rem;
    margin: 0 1rem;
    padding: 3.25rem;
  }

  &:not(:last-child) {
    margin-bottom: 2rem;
  }

  &::before {
    display: block;
    position: absolute;
    top: 50%;
    left: 50%;
    width: 100%;
    height: 100%;
    background-image: url('../img/olive-leaves.svg');
    background-repeat: no-repeat;
    background-size: contain;
    opacity: 0.25;
    transform: translate(-50%, -50%);
    content: '';
  }
}

.award-winner {
  @include font-family-condensed;

  margin-bottom: 0.25rem;
  font-size: var(--hiq-font-size-small);
  letter-spacing: 0.075em;
  text-transform: uppercase;
  color: var(--hiq-color-primary);
}

.award-title {
  margin-bottom: 0.25rem;
  font-size: var(--hiq-font-size-small);
  font-weight: var(--hiq-font-weight-bold);
}

.award-org {
  margin-bottom: 0;
  font-size: var(--hiq-font-size-small);
}

.wp-block-quote {
  margin: 5rem 0;

  @media (min-width: $tablet) {
    margin: 7.5rem 0;
  }
}

.wp-block-media-text {
  @media (min-width: $tablet) {
    @include grid;
    align-items: center;
  }

  &:first-of-type {
    margin-top: 5rem;

    @media (min-width: $tablet) {
      margin-top: 7.5rem;
    }
  }

  &:last-of-type {
    margin-bottom: 5rem;

    @media (min-width: $tablet) {
      margin-bottom: 7.5rem;
    }
  }

  &:not(:first-of-type) {
    margin-top: 3rem;
  }

  &:nth-of-type(even) {

    .wp-block-media-text__media {
      grid-column: 8 / -1;
    }

    .wp-block-media-text__content {
      grid-column: auto / span 7;
      grid-row: 1;
    }
  }

  .wp-block-media-text__media {
    position: relative;
    padding: 35% 0;

    @media (min-width: $tablet) {
      grid-column: auto / span 5;
    }

    img {
      display: block;
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      background-color: var(--hiq-gray-darker);
      object-fit: cover;
    }
  }

  .wp-block-media-text__content {
    @media (min-width: $tablet) {
      grid-column: 6 / -1;
    }
  }
}

